--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,9 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
-    "start": "set PUBLIC_URL=login&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
