--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-SESSION_EXPIRATION_IN_HOURS = 12
+MONGO_URI = "mongodb+srv://zivzarum:T6AOOPzLenBMcfyI@cluster0.cdxxxk3.mongodb.net/"
 PORT = 3031
-MONGO_URI = 'mongodb+srv://ilanhgold:1f6aFumbOVamd7oB@cluster0.ixux8o9.mongodb.net/'
+SESSION_EXPIRATION_IN_HOURS = 4
+
 
