Implement session promise waiting for initialization, add new libraries for cookies & rate-limit

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "1.4.0",
+    "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -26,6 +28,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.2"
