--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 SESSION_EXPIRATION_IN_HOURS = 12
 PORT = 3031
-MONGO_URI = 'mongodb+srv://ilanhgold:1f6aFumbOVamd7oB@cluster0.ixux8o9.mongodb.net/'
+MONGO_URI = 'mongodb://127.0.0.1:27017/'
 
