--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "1.4.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "9.0.2",
