--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "axios": "1.4.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
