--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "axios": "1.4.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "1.4.6",
@@ -26,15 +25,18 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22",
     "react-router-dom": "^6.14.2",
+    "redis": "4.6.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.0",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "9.0.2",
     "@types/multer": "^1.4.7",
+    "@types/redis": "4.0.11",
     "@types/uuid": "^9.0.2"
   }
 }
