--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22",
     "react-router-dom": "^6.14.2",
-    "redis": "4.6.8",
+    "redis": "^4.6.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
