--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "build": "tsc",
+    "start": "nodemon index.ts",
+    "start:prod": "node index.js"
   },
   "keywords": [],
   "author": "",
